make wrapper compatible with Python3
These changes make it possible to compile the wrapper under Python3 again.
All numpy references had to be removed due to incompatible API changes.
The function MatterProbPDGArr was removed entirely, as it is superfluous
at this point. The function SetParametersArr now takes a regular
Python list instead of a numpy array as input.

--- a/wrapper/Makefile
+++ b/wrapper/Makefile
@@ -1,5 +1,5 @@
 #connecting globes
-prefix = /afs/ifh.de/user/t/terliuk/scratch/software/GLoBES_v311/installed//
+prefix = /afs/ifh.de/user/t/trettin/scratch/software/GLoBES_v401/installed/
 exec_prefix = ${prefix}
 libdir = ${exec_prefix}/lib
 globesconf= $(exec_prefix)/bin/globes-config
@@ -14,15 +14,22 @@ PYTHON_INCLUDE:=$(shell python-config --includes)
 PYTHON_LIB:=$(shell python-config --libs)
 #PYTHON_LIB =  $(I3_PORTS)/../lib/python$(PYTHON_VERSION)
 # location of the Boost Python include files and library
- 
+
+# make sure that lboost_python36 can be found and will be found again
+# when the module is loaded without first loading cvmfs 
+RLIB=/cvmfs/icecube.opensciencegrid.org/py3-v4.0.1/RHEL_7_x86_64/lib/
+RLIB64=/cvmfs/icecube.opensciencegrid.org/py3-v4.0.1/RHEL_7_x86_64/lib64/
 #BOOST_INC = $(I3_PORTS)/../include/boost/
 #BOOST_LIB = $(I3_PORTS)/../lib/boost/
 
-TARGET=wrapper
-$(TARGET).so: $(TARGET).o 
-	g++ -shared -Wl,--export-dynamic  $(TARGET).o -lboost_python $(PYTHON_INCLUDE) $(PYTHON_LIB)  $(INCFLAGS) $(LDFLAGS) $(local_LDFLAGS) -L./. -lsnu -o $(TARGET).so ; \
-    mv wrapper.so GLoBES.so
+wrapper.so: wrapper.o 
+	g++ -shared -Wl,--export-dynamic wrapper.o -lboost_python36 $(PYTHON_INCLUDE) $(PYTHON_LIB)  $(INCFLAGS) $(LDFLAGS) $(local_LDFLAGS) -Wl,-rpath,$(RLIB) -L$(RLIB) -L./. -lsnu -o wrapper.so
+	
+wrapper.o: wrapper.cxx
+	g++ $(PYTHON_INCLUDE) $(INCFLAGS) $(LDFLAGS) $(local_LDFLAGS) -Wl,-rpath,$(RLIB) -fPIC -c wrapper.cxx 
 
-$(TARGET).o: $(TARGET).cxx
-	g++ $(PYTHON_INCLUDE) $(INCFLAGS) $(LDFLAGS) $(local_LDFLAGS) -fPIC -c $(TARGET).cxx 
-
+install: wrapper.so
+	mv wrapper.so GLoBES.so
+	 	 			 
+clean:
+	rm GLoBES.so wrapper.o	 
